// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SuccessMessage Component matches the snapshot 1`] = `
<DocumentFragment>
  <div
    class="px-2 py-2.5 bg-green-400 bg-opacity-50 border border-solid border-green-400"
  >
    <div
      class="flex flex-col items-center justify-center hidden"
    >
      <img
        alt="Happy Illustration"
        class="opacity-80 mb-2.5"
        src="happy.png"
        width="80"
      />
    </div>
    <h2
      class="font-bold"
    >
      Success
    </h2>
    <p>
      Generic children
    </p>
  </div>
</DocumentFragment>
`;

exports[`SuccessMessage Component matches the snapshot with illustration 1`] = `
<DocumentFragment>
  <div
    class="px-2 py-2.5 bg-green-400 bg-opacity-50 border border-solid border-green-400"
  >
    <div
      class="flex flex-col items-center justify-center"
    >
      <img
        alt="Happy Illustration"
        class="opacity-80 mb-2.5"
        src="happy.png"
        width="80"
      />
    </div>
    <h2
      class="font-bold"
    >
      Success
    </h2>
    <p>
      Generic children
    </p>
  </div>
</DocumentFragment>
`;
